# Auto-Codex

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  MIGRATION.md  README.md  RELEASE.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
auto-claude/: .gitignore  __init__.py  analyzer.py  auto_claude_tools.py  client.py  commit_message.py  debug.py  implementation_plan.py  init.py  linear_integration.py  linear_updater.py  phase_config.py  progress.py  qa_loop.py  requirements.txt  workspace.py  worktree.py
auto-claude-ui/: .env.example  .gitignore  README.md  design.json  eslint.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
auto-codex/: .env.example  __init__.py  context.py  context_cli.py  graphiti.py  graphiti_memory.py  ideation_runner.py  memory_validator.py  phase_config.py  planner.py  requirements.txt  roadmap_runner.py  run.py  service_context.py  test_graphiti_memory.py
auto-codex-ui/: .env.example  README.md  package.json  pnpm-lock.yaml
guides/: CLI-USAGE.md  DOCKER-SETUP.md  OPERATIONS.md  README.md
openspec/: project.md
scripts/: backup-falkordb.sh  backup-userdata.sh  bump-version.js  healthcheck.sh  restore-falkordb.sh  sync-upstream.sh
tests/: conftest.py  qa_report_helpers.py  requirements-test.txt  review_fixtures.py  test_agent_architecture.py  test_ai_analyzer.py  test_analyzer_port_detection.py  test_auth.py  test_auth_properties.py  test_ci_discovery.py  test_codex_adapter.py  test_codex_robustness.py  (+54 more)
(+751 files in other folders)
