[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "auto-codex"
version = "3.0.1"
description = "Multi-agent autonomous coding framework"
readme = "README.md"
license = {text = "AGPL-3.0"}
requires-python = ">=3.12"
authors = [
    {name = "Auto-Codex Team"}
]
keywords = ["ai", "codex", "autonomous", "coding", "agents"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "httpx>=0.25",
    "pydantic>=2.0",
    "jsonschema>=4.0",
]

[project.optional-dependencies]
graphiti = [
    "graphiti-core>=0.5",
    "falkordb>=1.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21",
    "hypothesis>=6.0",
]

[project.scripts]
auto-codex = "cli.main:main"

[tool.setuptools.packages.find]
where = ["auto-codex"]
include = ["*"]
exclude = ["tests*", "*.egg-info"]
